# cookiecutter-pebbling

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
hooks/utils/: __init__.py  file_operations.py
{{cookiecutter.name}}/: Dockerfile  README.md  agent_config.json  pyproject.toml
{{cookiecutter.name}}/.pebble/: agent_config.json  agent_config.toml
{{cookiecutter.name}}/src/: deploy_to_spaces.py  main..py  main.py  pebble_agent.py
{{cookiecutter.project_name}}/: protocol_config.json  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: Dockerfile  app.py
