[project]
name = "{{ cookiecutter.name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "pebbling==0.1.1",
  "tomli; python_version < '3.11'",
{% if cookiecutter.agent_framework == "agno" %}
  "agno",
  "openai"
{% elif cookiecutter.agent_framework == "crew" %}
  "crewai",
{% elif cookiecutter.agent_framework == "langchain" %}
  "langchain",
  "langchain-openai",
{% endif %}
]

{% if cookiecutter.pebbling_email %}
authors = [
  { email = "{{ cookiecutter.pebbling_email }}" },
]
{% endif %}

[dependency-groups]
dev = [
  "pebble",
]
